# apis-instance-jelinek

./: .gitignore  README.md  manage.py  pyproject.toml
apis_ontology/: jelinek_api_filters.py  jelinek_api_serializers.py  jelinek_api_views.py  models.py  order.csv  urls.py
apis_ontology/management/commands/: run_ontology_script.py
apis_ontology/migrations/: 0036_e1_crm_entity_vector_search_speedup_set.py
apis_ontology/ontology_specific_scripts/: import_tei.py  populate_indexes.py
apis_ontology/settings/: server_settings.py
