[tool.poetry]
name = "apis-instance-jelinek"
version = "0.1.0"
description = "Generic APIS project for auto devops"
authors = [" Katharina Wünsche  <katharina.wuensche@oeaw.ac.at>"]
license = "MIT"
packages = [{include = "apis_ontology"}]


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
apis-core = { git = "https://github.com/acdh-oeaw/apis-core-rdf.git", tag = "v0.2.0" }
psycopg2 = "^2.9.6"
dj-database-url = "^0.5.0"
whitenoise = "^5.2.0"
sentry-sdk = "*"
django-csp = "^3.7"
django-allow-cidr = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
