[tool.poetry]
name = "apis-instance-jelinek"
version = "0.1.0"
description = "Generic APIS project for auto devops"
authors = [" Katharina Wünsche  <katharina.wuensche@oeaw.ac.at>"]
license = "MIT"
packages = [{include = "apis_ontology"}]


[tool.poetry.dependencies]
python = "^3.11"
apis-core = { git = "https://github.com/acdh-oeaw/apis-core-rdf.git", tag = "v0.7.0" }
apis-acdhch-default-settings = { git = "https://github.com/acdh-oeaw/apis-acdhch-default-settings", tag = "v0.1.9" }
psycopg2 = "^2.9.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
